# cbc-ml

./: .gitignore  LICENSE.md  Manifest.toml  Project.toml  README.md  pyproject.toml  references.md
src/: CBCML.jl  data.jl  data.py  neuralode.jl  visualisation.jl
