[project]
name = "cbc-ml"
version = "0.1.0"
description = "Source code for the CBC-ML research project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.0",
    "ipython>=9.4.0",
    "jax>=0.7.0; sys_platform != 'linux'",
    "jax[cuda]>=0.7.0; sys_platform == 'linux'",
    "jax-dataloader>=0.1.3",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "derivative>=0.6.3",
]
